--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,17 +16,26 @@ body {
     width: 66vw;
     display: grid;
     align-content: space-around;
-    justify-items: stretch;
+    // justify-items: stretch;
     // grid-template-rows: 1fr 2fr 1fr;
 }
 
 .logo-main,
-.recent-posts {
+.recent-posts
+{
     display: grid;
     justify-items: center;
 }
 
-$color-gray-one: #666666;
-$color-gray-two: #b3b3b3;
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
 
-@import './searchBar.scss';
+$color-gray-one: #666666;
+$color-gray-two: #B3B3B3;
+$color-blue-one: #0079FF;
+
+@import './searchBar';
+@import './recentPosts';
