--- a/src/style/searchBar.scss
+++ b/src/style/searchBar.scss
@@ -1,4 +1,5 @@
 .search-bar {
+    display: grid;
 
     .search-bar-wrapper {
         display: grid;
@@ -12,8 +13,6 @@
             border: 0px solid transparent;
             border-radius: 5px;
 
-            height: 118px;
-            font-size: 40px;
 
             transition: all .2s ease;
 
@@ -34,5 +33,23 @@
             font-size: 14px;
             color: $color-gray-two;
         }
+    }
+}
+
+.search-bar-home {
+    align-content: center;
+    justify-items: center;
+    input {
+        height: 118px;
+        font-size: 40px;
+    }
+}
+
+.search-bar-results {
+    align-content: start;
+    justify-items: center;
+    input {
+        font-size: 22px;
+        height: 36px;
     }
 }
