--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,6 +26,7 @@ ul {
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
+$color-gray-three: #d8d8d8;
 $color-blue-one: #0079FF;
 
 @import './mixins.scss';
