--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,6 +29,12 @@ $color-gray-two: #B3B3B3;
 $color-gray-three: #d8d8d8;
 $color-blue-one: #0079FF;
 
+.no-content {
+    color: $color-gray-one;
+    font-size: 14px;
+    line-height: 17px;
+}
+
 @import './mixins.scss';
 @import './searchBar';
 @import './recentPosts';
